add_executable(test_json test_json.cpp)
target_compile_options(test_json PRIVATE -fprofile-arcs -ftest-coverage)
target_link_libraries(test_json gtest_main gcov fake_twitter)
add_test(NAME test_json COMMAND test_json)

add_executable(integration_test integration_test.cpp)
target_compile_options(integration_test PRIVATE -fprofile-arcs -ftest-coverage)
target_compile_features(integration_test PRIVATE cxx_std_17)
target_link_libraries(integration_test mypistache rapidjson sqlpp11 my-sqlpp11-connector-postgresql gtest_main gcov fake_twitter)
add_test(NAME integration_test COMMAND integration_test)

add_executable(test_users_endpoint test_users_endpoint.cpp)
target_compile_options(test_users_endpoint PRIVATE -fprofile-arcs -ftest-coverage)
target_compile_features(test_users_endpoint PRIVATE cxx_std_17)
target_link_libraries(test_users_endpoint fake_twitter gmock_main gcov pistache-test-utils)
add_test(NAME test_users_endpoint COMMAND test_users_endpoint)
